--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -28,7 +28,7 @@
             android:drawablePadding="10dp"
             android:drawableStart="@drawable/icon_name_selected"
             android:hint="@string/first_name"
-            android:inputType="textCapWords"
+            android:inputType="textCapWords|textNoSuggestions"
             android:maxLines="1"
             android:textSize="16sp" />
     </android.support.design.widget.TextInputLayout>
@@ -52,7 +52,7 @@
             android:drawablePadding="10dp"
             android:drawableStart="@drawable/icon_last_name_selected"
             android:hint="@string/last_name"
-            android:inputType="textCapWords"
+            android:inputType="textCapWords|textNoSuggestions"
             android:maxLines="1"
             android:textSize="16sp" />
     </android.support.design.widget.TextInputLayout>
@@ -77,7 +77,7 @@
             android:drawablePadding="10dp"
             android:drawableStart="@drawable/icon_email_selected"
             android:hint="@string/email"
-            android:inputType="textEmailAddress"
+            android:inputType="textEmailAddress|textNoSuggestions"
             android:maxLines="1"
             android:textSize="16sp" />
     </android.support.design.widget.TextInputLayout>
@@ -104,7 +104,7 @@
             android:drawableStart="@drawable/icon_password_selected"
             android:hint="@string/password"
             android:imeOptions="actionDone"
-            android:inputType="textPassword"
+            android:inputType="textPassword|textNoSuggestions"
             android:maxLines="1"
             android:textSize="16sp" />
     </android.support.design.widget.TextInputLayout>
