--- a/app/src/main/res/layout/landing_activity.xml
+++ b/app/src/main/res/layout/landing_activity.xml
@@ -8,6 +8,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background_2"
+    android:clickable="true"
+    android:focusable="true"
     android:focusableInTouchMode="true"
     tools:context=".Landing.LandingActivity"
     android:id="@+id/linear_layout_LA">
