--- a/app/src/main/res/layout/sign_in_forgot_password_dialog.xml
+++ b/app/src/main/res/layout/sign_in_forgot_password_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view_SIFPD"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -29,7 +29,7 @@
             app:srcCompat="@drawable/icon_close" />
 
         <TextView
-            android:id="@+id/text_view_forgot_password_SIFPD"
+            android:id="@+id/text_view_title_SIFPD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
@@ -49,12 +49,13 @@
             android:background="?attr/colorPrimaryDark" />
 
         <TextView
-            android:id="@+id/text_view_enter_email_below_SIFPD"
+            android:id="@+id/text_view_message_SIFPD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/forgot_password_dialog"
             android:textAlignment="center"
             android:textColor="?attr/colorPrimaryDark"
@@ -66,7 +67,7 @@
             android:layout_height="84dp"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="5dp">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_text_email_SIFPD"
@@ -89,7 +90,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:text="@string/forgot_password_submit"
+            android:text="@string/submit"
             android:textSize="16sp" />
 
     </LinearLayout>
