- Changed icons for show password toggle - Changed icons strokeWidth - Changed forgot password dialog message time

--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -47,6 +47,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_SIF"
+        app:passwordToggleDrawable="@drawable/icon_password_visibility_selected"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="?attr/colorPrimaryDark">
 
