--- a/app/src/main/res/drawable/icon_first_name_not_focused.xml
+++ b/app/src/main/res/drawable/icon_first_name_not_focused.xml
@@ -6,15 +6,15 @@
   <path
       android:pathData="M12.1,15H8c-2.2,0 -4,1.8 -4,4v2"
       android:strokeLineJoin="round"
-      android:strokeWidth="2"
+      android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorAccent"
+      android:strokeColor="?attr/colorPrimaryDark"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M12,11c-2.2,0 -4,-1.8 -4,-4s1.8,-4 4,-4"
       android:strokeLineJoin="round"
-      android:strokeWidth="2"
+      android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorAccent"
+      android:strokeColor="?attr/colorPrimaryDark"
       android:strokeLineCap="round"/>
 </vector>
