- Added Fragments for Tasks, Habits, and Timers - New Icons

--- a/app/src/main/res/layout/landing_activity.xml
+++ b/app/src/main/res/layout/landing_activity.xml
@@ -65,7 +65,7 @@
         app:tabMode="fixed"
         app:tabIndicatorColor="@color/colorTransparent"
         app:tabTextColor="?attr/colorPrimaryDark"
-        app:tabSelectedTextColor="@color/colorTextLight"
+        app:tabSelectedTextColor="?attr/android:textColor"
         app:background="@color/colorTransparent"
         app:tabBackground="@android:color/transparent" />
 
