--- a/app/src/main/res/drawable/icon_tasks_focused.xml
+++ b/app/src/main/res/drawable/icon_tasks_focused.xml
@@ -4,31 +4,38 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,12.7m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"
+      android:pathData="M16,4h2c1.1,0 2,0.9 2,2v14c0,1.1 -0.9,2 -2,2H6c-1.1,0 -2,-0.9 -2,-2V6c0,-1.1 0.9,-2 2,-2h2"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M12,6.7L12,12.7"
+      android:pathData="M9,2h6c0.6,0 1,0.4 1,1v2c0,0.6 -0.4,1 -1,1H9C8.4,6 8,5.6 8,5V3C8,2.4 8.4,2 9,2z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M9.1,0.7L15.1,0.7"
+      android:pathData="M7.9,10h8.3"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M21.2,3.3L19.1,5.5"
+      android:pathData="M16.1,14H7.9"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M7.9,18h8.3"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.2"
+      android:fillColor="#00000000"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
 </vector>
