Minor changes to main activity xml file

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -25,7 +25,7 @@
         android:layout_gravity="top"
         app:tabGravity="fill"
         app:tabMode="fixed"
-        app:tabIndicatorColor="?attr/colorPrimaryDark"
+        app:tabIndicatorColor="@color/colorTransparent"
         app:tabTextColor="?attr/colorPrimaryDark"
         app:tabSelectedTextColor="?attr/android:textColor"
         app:background="@color/colorTransparent"
