--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -15,21 +15,34 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="top"
+        android:background="?attr/colorPrimary"
         app:theme="@style/NoActionBarTheme"
-        android:elevation="0dp" />
+        android:elevation="0dp" >
+
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/app_name_upper"
+            android:textSize="30sp" />
+
+    </android.support.v7.widget.Toolbar>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout_MA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
+        android:background="?attr/cardBackgroundColor"
+        app:tabBackground="@android:color/transparent"
         app:tabGravity="fill"
-        app:tabMode="fixed"
         app:tabIndicatorColor="@color/colorTransparent"
-        app:tabTextColor="?attr/colorPrimaryDark"
+        app:tabMode="fixed"
         app:tabSelectedTextColor="?attr/android:textColor"
-        app:background="@color/colorTransparent"
-        app:tabBackground="@android:color/transparent" />
+        app:tabTextColor="?attr/colorPrimaryDark" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager_MA"
