--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/colorPrimary"
     tools:context=".Main.MainActivity"
     android:id="@+id/linear_layout_MA">
 
@@ -28,6 +29,17 @@
             android:fontFamily="@font/poppins_bold"
             android:text="@string/app_name_upper"
             android:textSize="30sp" />
+
+        <ImageView
+            android:id="@+id/toolbar_heart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:paddingStart="0dp"
+            android:paddingEnd="16dp"
+            android:contentDescription="@string/heart"
+            android:src="@drawable/icon_heart"
+            />
 
     </android.support.v7.widget.Toolbar>
 
