--- a/app/src/main/res/drawable/icon_info_focused.xml
+++ b/app/src/main/res/drawable/icon_info_focused.xml
@@ -4,24 +4,24 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,2l-10,5l10,5l10,-5l-10,-5z"
+      android:pathData="M12,12m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M2,17l10,5l10,-5"
+      android:pathData="M12,16L12,12"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M2,12l10,5l10,-5"
+      android:pathData="M12,8L12,8"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
 </vector>
