--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -34,8 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:paddingStart="0dp"
-            android:paddingEnd="16dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="16dp"
             android:contentDescription="@string/heart"
             android:src="@drawable/icon_heart"
             android:id="@+id/toolbar_heart_MA" />
