--- a/app/src/main/res/drawable/icon_contact_focused.xml
+++ b/app/src/main/res/drawable/icon_contact_focused.xml
@@ -4,24 +4,17 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,2l-10,5l10,5l10,-5l-10,-5z"
+      android:pathData="M21,15c0,1.1 -0.9,2 -2,2H7l-4,4V5c0,-1.1 0.9,-2 2,-2h14c1.1,0 2,0.9 2,2V15z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M2,17l10,5l10,-5"
+      android:pathData="M21,4.8l-9,6.1l-9,-6.1"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M2,12l10,5l10,-5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.2"
-      android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
 </vector>
