--- a/app/src/main/res/drawable/icon_dashboard_focused.xml
+++ b/app/src/main/res/drawable/icon_dashboard_focused.xml
@@ -8,20 +8,20 @@
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M2,17l10,5l10,-5"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M2,12l10,5l10,-5"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
 </vector>
