--- a/app/src/main/res/drawable/icon_my_account_focused.xml
+++ b/app/src/main/res/drawable/icon_my_account_focused.xml
@@ -4,24 +4,17 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,2l-10,5l10,5l10,-5l-10,-5z"
+      android:pathData="M20,21v-2a4,4 0,0 0,-4 -4H8a4,4 0,0 0,-4 4v2"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M2,17l10,5l10,-5"
+      android:pathData="M12,7m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0"
       android:strokeLineJoin="round"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M2,12l10,5l10,-5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.2"
-      android:fillColor="#00000000"
-      android:strokeColor="?attr/colorPrimaryDark"
+      android:strokeColor="?attr/colorAccent"
       android:strokeLineCap="round"/>
 </vector>
