--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
         <item name="colorButtonNormal">@color/colorComplement_1</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowAnimationStyle">@null</item>
     </style>
 
     <style name="ActionBarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
