--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -25,7 +25,7 @@ tools:layout_editor_absoluteY="56dp">
     android:layout_height="40dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    app:layout_constraintBottom_toTopOf="@+id/layout_dashboard_DM"
+    app:layout_constraintBottom_toTopOf="@+id/layout_activity_DM"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@ tools:layout_editor_absoluteY="56dp">
 </LinearLayout>
 
 <LinearLayout
-    android:id="@+id/layout_dashboard_DM"
+    android:id="@+id/layout_activity_DM"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:gravity="center_vertical"
@@ -61,19 +61,19 @@ tools:layout_editor_absoluteY="56dp">
     app:layout_constraintTop_toBottomOf="@+id/layout_home_DM">
 
     <ImageView
-        android:id="@+id/icon_dashboard_DM"
+        android:id="@+id/icon_activity_DM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="25dp"
         android:layout_marginStart="25dp"
-        android:contentDescription="@string/dashboard"
-        android:src="@drawable/icon_dashboard" />
+        android:contentDescription="@string/activity"
+        android:src="@drawable/icon_activity" />
 
     <TextView
-        android:id="@+id/text_view_dashboard_DM"
+        android:id="@+id/text_view_activity_DM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dashboard"
+        android:text="@string/activity"
         android:textColor="@color/colorBaseLight" />
 
 </LinearLayout>
@@ -84,11 +84,11 @@ tools:layout_editor_absoluteY="56dp">
     android:layout_height="40dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    app:layout_constraintBottom_toTopOf="@+id/layout_contact_DM"
+    app:layout_constraintBottom_toTopOf="@+id/layout_contact_us_DM"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/layout_dashboard_DM">
+    app:layout_constraintTop_toBottomOf="@+id/layout_activity_DM">
 
     <ImageView
         android:id="@+id/icon_my_account_DM"
@@ -108,7 +108,7 @@ tools:layout_editor_absoluteY="56dp">
 </LinearLayout>
 
 <LinearLayout
-    android:id="@+id/layout_contact_DM"
+    android:id="@+id/layout_contact_us_DM"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:gravity="center_vertical"
@@ -120,19 +120,19 @@ tools:layout_editor_absoluteY="56dp">
     app:layout_constraintTop_toBottomOf="@+id/layout_my_account_DM">
 
     <ImageView
-        android:id="@+id/icon_contact_DM"
+        android:id="@+id/icon_contact_us_DM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="25dp"
         android:layout_marginStart="25dp"
-        android:contentDescription="@string/contact"
-        android:src="@drawable/icon_contact" />
+        android:contentDescription="@string/contact_us"
+        android:src="@drawable/icon_contact_us" />
 
     <TextView
-        android:id="@+id/text_view_contact_DM"
+        android:id="@+id/text_view_contact_us_DM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/contact"
+        android:text="@string/contact_us"
         android:textColor="@color/colorBaseLight" />
 </LinearLayout>
 
@@ -146,7 +146,7 @@ tools:layout_editor_absoluteY="56dp">
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/layout_contact_DM">
+    app:layout_constraintTop_toBottomOf="@+id/layout_contact_us_DM">
 
     <ImageView
         android:id="@+id/icon_info_DM"
