--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -17,7 +17,43 @@ tools:layout_editor_absoluteY="56dp">
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+    app:layout_constraintTop_toTopOf="parent">
+
+    <ImageView
+        android:id="@+id/image_view_profile_picture_DM"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginStart="25dp"
+        android:contentDescription="@string/profile_picture"
+        android:src="@drawable/k_logo" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_view_profile_full_name_DM"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_light"
+            android:text="@string/profile_full_name"
+            android:textColor="?attr/colorAccent"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/text_view_email_DM"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/roboto_light"
+            android:text="@string/profile_email"
+            android:textColor="@color/colorTextLight"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+</LinearLayout>
 
 <LinearLayout
     android:id="@+id/layout_home_DM"
@@ -54,7 +90,7 @@ tools:layout_editor_absoluteY="56dp">
     android:layout_height="40dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    app:layout_constraintBottom_toTopOf="@+id/layout_my_account_DM"
+    app:layout_constraintBottom_toTopOf="@+id/layout_profile_DM"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +115,7 @@ tools:layout_editor_absoluteY="56dp">
 </LinearLayout>
 
 <LinearLayout
-    android:id="@+id/layout_my_account_DM"
+    android:id="@+id/layout_profile_DM"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:gravity="center_vertical"
@@ -91,19 +127,19 @@ tools:layout_editor_absoluteY="56dp">
     app:layout_constraintTop_toBottomOf="@+id/layout_activity_DM">
 
     <ImageView
-        android:id="@+id/icon_my_account_DM"
+        android:id="@+id/icon_profile_DM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="25dp"
         android:layout_marginStart="25dp"
-        android:contentDescription="@string/my_account"
-        android:src="@drawable/icon_my_account" />
+        android:contentDescription="@string/profile"
+        android:src="@drawable/icon_profile" />
 
     <TextView
-        android:id="@+id/text_view_my_account_DM"
+        android:id="@+id/text_view_profile_DM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/my_account"
+        android:text="@string/profile"
         android:textColor="@color/colorBaseLight" />
 </LinearLayout>
 
@@ -117,7 +153,7 @@ tools:layout_editor_absoluteY="56dp">
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/layout_my_account_DM">
+    app:layout_constraintTop_toBottomOf="@+id/layout_profile_DM">
 
     <ImageView
         android:id="@+id/icon_contact_us_DM"
