--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout_SIF"
@@ -10,7 +9,8 @@
     android:clickable="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context=".Landing.SignInFragment">
+    tools:context=".Landing.SignInFragment"
+    tools:layout_editor_absoluteY="56dp">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout_email_SIF"
@@ -42,7 +42,7 @@
         android:layout_height="84dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_sign_in_SIF"
+        app:layout_constraintBottom_toTopOf="@+id/linear_layout_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,55 +65,64 @@
     </android.support.design.widget.TextInputLayout>
 
 
-    <Button
-        android:id="@+id/button_sign_in_SIF"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/linear_layout_SIF"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:text="@string/sign_in"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_forgot_password_SIF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password_SIF" />
-
-    <Button
-        android:id="@+id/button_forgot_password_SIF"
-        android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="20dp"
-        android:background="@color/colorTransparent"
-        android:text="@string/forgot_password"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="?attr/colorAccent"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/text_view_or_SIF"
-        app:layout_constraintEnd_toStartOf="@+id/button_continue_guest_SIF"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_sign_in_SIF" />
-
-    <Button
-        android:id="@+id/button_continue_guest_SIF"
-        android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorTransparent"
-        android:text="@string/continue_guest"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="?attr/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button_forgot_password_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_forgot_password_SIF"
-        app:layout_constraintTop_toTopOf="@+id/button_forgot_password_SIF"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password_SIF">
+
+        <Button
+            android:id="@+id/button_sign_in_SIF"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/sign_in"
+            android:textSize="16sp"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="285dp" />
+
+        <LinearLayout
+            android:id="@+id/linear_layout_2_SIF"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_forgot_password_SIF"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@color/colorTransparent"
+                android:text="@string/forgot_password"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="?attr/colorAccent"
+                tools:layout_editor_absoluteX="20dp"
+                tools:layout_editor_absoluteY="371dp" />
+
+            <Button
+                android:id="@+id/button_continue_guest_SIF"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@color/colorTransparent"
+                android:text="@string/continue_guest"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="?attr/colorAccent"
+                tools:layout_editor_absoluteX="202dp"
+                tools:layout_editor_absoluteY="371dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <View
         android:id="@+id/view_1_SIF"
@@ -122,13 +131,14 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:background="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toStartOf="@+id/text_view_or_SIF"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/text_view_or_SIF"
@@ -140,7 +150,7 @@
         app:layout_constraintEnd_toStartOf="@+id/view_2_SIF"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/view_1_SIF"
-        app:layout_constraintTop_toBottomOf="@+id/button_forgot_password_SIF" />
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout_SIF" />
 
     <View
         android:id="@+id/view_2_SIF"
@@ -149,13 +159,14 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
         android:background="?attr/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/text_view_or_SIF"
         app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button_facebook_SIF"
@@ -181,7 +192,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
         android:drawablePadding="20dp"
         android:drawableStart="@drawable/icon_google"
         android:text="@string/google"
@@ -192,7 +202,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_facebook_SIF"
-        app:layout_constraintTop_toTopOf="@+id/button_facebook_SIF"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/button_facebook_SIF" />
 
 </android.support.constraint.ConstraintLayout>
