--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:theme="@style/NoActionBarTheme"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,7 +17,6 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="top"
         android:background="?attr/colorPrimary"
-        app:theme="@style/NoActionBarTheme"
         android:elevation="0dp"
         android:id="@+id/toolbar_MA" >
 
@@ -92,8 +92,7 @@
             app:mccb_expandRadius="120dp"
             app:mccb_textSize="18sp"
             app:mccb_textColor="@color/colorTextLight"
-            app:mccb_itemBackgroundColor="@color/colorTextLight"
-            />
+            app:mccb_itemBackgroundColor="@color/colorTextLight" />
 
     </RelativeLayout>
 
