- Changed wait length before onBackPress to close the app so it matches the toast - Added new activities to match their current name - Added activities to add tasks, habits, and timers - Added waveView for wave animations - Added icon for "back" button

--- a/app/src/main/res/layout/new_task_activity.xml
+++ b/app/src/main/res/layout/new_task_activity.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
+app:layout_behavior="@string/appbar_scrolling_view_behavior"
 xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/linear_layout_CUA"
+android:id="@+id/scroll_view_NTA"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="?attr/colorPrimary"
 android:fitsSystemWindows="true"
 android:orientation="vertical"
-tools:context=".ContactUs.ContactUsActivity">
+tools:context=".Main.Tasks.NewTaskActivity">
 
 <android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar_CUA"
+    android:id="@+id/toolbar_NTA"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:layout_gravity="top"
-    android:background="?attr/colorPrimary"
+    android:background="?attr/colorAccent"
     android:elevation="0dp"
     app:theme="@style/NoActionBarTheme">
 
     <TextView
-        android:id="@+id/toolbar_title_CUA"
+        android:id="@+id/toolbar_title_NTA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="@string/contact_us"
+        android:text="@string/new_task"
         android:textAllCaps="true"
         android:textSize="30sp" />
 </android.support.v7.widget.Toolbar>
 
-<View
-    android:id="@+id/view_divider_CUA"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="?attr/colorPrimaryDark" />
-
-<android.support.v4.view.ViewPager
-    android:id="@+id/view_pager_CUA"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    <com.scwang.wave.MultiWaveHeader
+        android:id="@+id/wave_NTA"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleY="1"
+        app:mwhVelocity="2"
+        app:mwhProgress="0.15"
+        app:mwhIsRunning="true"
+        app:mwhGradientAngle="90"
+        app:mwhWaveHeight="20dp"
+        app:mwhColorAlpha=".95"
+        app:mwhStartColor="?attr/colorAccent"
+        app:mwhCloseColor="?attr/colorAccent"
+        app:mwhWaves="90,25,1.4,1.4,-70 420,0,1.15,1,40" />
 
 </LinearLayout>
