--- a/app/src/main/res/layout/activity_activity.xml
+++ b/app/src/main/res/layout/activity_activity.xml
@@ -20,7 +20,7 @@
         app:theme="@style/NoActionBarTheme">
 
         <TextView
-            android:id="@+id/toolbar_title_DA"
+            android:id="@+id/toolbar_title_AA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
