--- a/app/src/main/res/layout/habits_fragment.xml
+++ b/app/src/main/res/layout/habits_fragment.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main.HabitsFragment">
+    tools:context=".Main.Habits.HabitsFragment">
 
 </android.support.constraint.ConstraintLayout>
